[package]
name = "kpae"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/crsov/kpae"
description = """
KataGo Parallel Analysis Engine (https://github.com/lightvector/KataGo/blob/master/docs/Analysis_Engine.md) API wrapper.
"""

[dependencies]
bytes = "1.3.0"
derive_builder = "0.12.0"
futures-core = "0.3.25"
futures-sink = "0.3.25"
futures-util = "0.3.25"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
serde_with = "2.1.0"
tokio = { version = "1.23.0", features = ["rt", "process", "io-util"] }
tokio-stream = { version = "0.1.11", features = [
  "io-util",
], default-features = false }
tokio-util = { version = "0.7.4", features = ["codec"] }
